Modify merge file.

--- a/set_variable_range.ipynb
+++ b/set_variable_range.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "e49e5f72",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "56f156aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = ['Albumin', 'Arterial pH', 'Calcium', 'Glucose', \n",
+    "index = [\n",
+    "         'Albumin', 'Arterial pH', 'Calcium', 'Glucose', \n",
     "         'Hemoglobin', 'Magnesium', 'PTT', 'Postassium', 'SGPT',\n",
     "         'Arterial blood gas', 'BUN', 'HCO3', 'INR', \n",
     "         'Arterial Lactate', 'CO2', 'Creatinine', 'Ionized Calcium',\n",
@@ -28,18 +29,20 @@
     "         'Temperature (Celsius)', 'Weight (kg)', 'Heart Rate',\n",
     "         'SpO2', 'Mechanical Ventilation'\n",
     "        ]\n",
-    "data = {'OUTLIER LOW': [None] * len(index), \n",
+    "\n",
+    "data = {\n",
+    "        'OUTLIER LOW': [None] * len(index), \n",
     "        'VALID LOW': [None] * len(index), \n",
     "        'IMPUTE': [None] * len(index), \n",
     "        'VALID HIGH': [None] * len(index),\n",
     "        'OUTLIER_HIGH': [None] * len(index),\n",
     "        'GROUP_ID': [''] * len(index)\n",
-    "       }\n"
+    "       }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "412d6fb4",
    "metadata": {},
    "outputs": [],
@@ -49,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "5a746b94",
    "metadata": {},
    "outputs": [],
    "source": [
     "# column = ('OUTLIER LOW', 'VALID LOW', 'IMPUTE', 'VALID HIGH', 'OUTLIER_HIGH', 'GROUP_ID')\n",
     "data.loc['Albumin'] = [0, 0.6, 3.1, 6, 60, '50862, 772, 1521, 227456'] # delete some group_id from MIMIC_EXTRACT\n",
-    "data.loc['Arterial pH']['GROUP_ID'] = '673, 870, 9765'\n",
+    "data.loc['Arterial pH']['GROUP_ID'] = '780, 1126, 223830, 50820'\n",
     "data.loc['Calcium']['GROUP_ID'] = '225625, 50893, 786, 1522'\n",
     "data.loc['Glucose'] = [0, 33, 128, 2000, 2200, '220621, 225664, 50809, 811, 807, 50931, 226537, 1529']\n",
     "data.loc['Hemoglobin'] = [0, 0, 10.2, 25, 30, '220228, 51222, 50811, 814']\n",
@@ -94,21 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "0afd3e32",
    "metadata": {},
    "outputs": [],
    "source": [
     "data.to_csv('variable_range.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e9e49cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
