Modify preprocessing code.

--- a/mimiciv_code/set_variable_range.ipynb
+++ b/mimiciv_code/set_variable_range.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e49e5f72",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "56f156aa",
    "metadata": {},
    "outputs": [],
@@ -35,14 +35,14 @@
     "        'VALID LOW': [None] * len(index), \n",
     "        'IMPUTE': [None] * len(index), \n",
     "        'VALID HIGH': [None] * len(index),\n",
-    "        'OUTLIER_HIGH': [None] * len(index),\n",
-    "        'GROUP_ID': [''] * len(index)\n",
+    "        'OUTLIER HIGH': [None] * len(index),\n",
+    "        'GROUP_ID': ['-1'] * len(index)\n",
     "       }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "412d6fb4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "5a746b94",
    "metadata": {},
    "outputs": [],
@@ -97,13 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "0afd3e32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('variable_range.csv')"
+    "data.to_csv('../data/mimiciv/variable_range.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdedd4a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
